--- a/pom.xml
+++ b/pom.xml
@@ -4,9 +4,9 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>com.contract</groupId>
-        <artifactId>hcbm-parent</artifactId>
-        <version>0.1.0-SNAPSHOT</version>
+        <groupId>org.hzero</groupId>
+        <artifactId>hzero-parent</artifactId>
+        <version>1.2.1.RELEASE</version>
     </parent>
     <groupId>org.hcbm</groupId>
     <artifactId>hcbm-swagger</artifactId>
